# luaumb

./: .editorconfig  .gitignore  .gitmodules  .luaurc  CMakeLists.txt  Dockerfile  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  cmake-multi-platform.yml
example/: .luaurc  a.luau  b.luau  c.luau  d.luau  main.luau
example/good/: .luaurc
example/good/space/: space.luau
example/good/space/world/: init.luau
example/hello/: .luaurc  init.luau  world.luau
example/hello/space/: init.luau
example/lib/: count.luau  pi.luau  print.luau
src/: bundle.cpp  bundle.h  bundle.hpp  localizer.cpp  localizer.h  localizer.hpp  luaumb.cpp  luaumb.hpp  main.cpp  path.cpp  path.hpp  utils.cpp  utils.h  utils.hpp
tools/: concat-license.sh
utils/type-remover/: CMakeLists.txt  luau-type-remove.cpp
